--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./style.css">
+	<!-- Font Awesome CDN -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 	<title>TODO LIST</title>
 </head>
 
 <body>
+	<div class="container">
+		<div class="headerTitle">
+			<i class="fa-solid fa-list-check"></i>
+			<h1>My TO-DO List</h1>
+
+			<div class="form-group">
+				<input type="text" id="task" name="task" placeholder="enter task.." required>
+				<button class="addBtn" id="addBtn">ADD task</button>
+
+			</div>
+		</div>
+
+		<div id="tasklist">
+		</div>
+
+	</div>
+
+
+
 
 	<script src="./script.js"></script>
 </body>
